--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build_live_prod": "ng build --build-optimizer --prod --configuration=production"
   },
   "private": true,
   "dependencies": {
